Styling: fixed failing unit test `TestFlatStyleableValue` - caused by non-english locale - when running on Java 17